tests/errors/test_45.x
// Duplicable struct members

struct Data -> {
    x: int,
    x: char*
}

fn main() -> int {

}